--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.30.0
-atproto==0.0.9
-pillow==10.2.0
-imagehash==4.3.1
-web3==6.11.3
-python-dotenv==1.0.0
-supabase==2.3.0
-typing-extensions==4.7.1
+streamlit
+atproto
+pillow
+imagehash
+web3
+python-dotenv
+supabase
+typing-extensions
